examples/dyplomat/terraform/apps/frontenvoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/serviceone"
                route:
                  cluster: serviceone
              - match:
                  prefix: "/servicetwo"
                route:
                  cluster: servicetwo
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}

  clusters:
  - name: dyplomat
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    upstream_connection_options:
      tcp_keepalive: {}
    load_assignment:
      cluster_name: dyplomat
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dyplomat
                port_value: 8080
  - name: serviceone
    connect_timeout: 0.25s
    type: EDS
    lb_policy: round_robin
    http2_protocol_options: {}
    eds_cluster_config:
      eds_config:
        api_config_source:
          api_type: GRPC
          grpc_services:
            - envoy_grpc:
                cluster_name: dyplomat
  - name: servicetwo
    connect_timeout: 0.25s
    type: EDS
    lb_policy: round_robin
    http2_protocol_options: {}
    eds_cluster_config:
      eds_config:
        api_config_source:
          api_type: GRPC
          grpc_services:
            - envoy_grpc:
                cluster_name: dyplomat

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
